Fix Wrapping

--- a/src/app/pages/edit/edit.component.scss
+++ b/src/app/pages/edit/edit.component.scss
@@ -34,7 +34,7 @@
     background-color: rgba(100, 100, 100, 0.5);
     border: 1px solid #69f0ae;
     padding: 1rem;
-    white-space: pre;
+    white-space: pre-wrap;
   }
 }
 
